Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -49,6 +49,7 @@
 % details of parameter exploration/calibration
     % basin data used for parameter exploration
 % details of lithology implementation
+    % including Sunda Shelf
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% SUPPLMENTARY INFORMATION FIGURES %%
@@ -143,7 +144,7 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-The broader Indonesia Archipelago has an out-sized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Hartmann2009a, Hartmann2014a}. There has been significant growth of land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a}; Fig. \ref{Fig:indo_growth}). This collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics.
+The broader Indonesia Archipelago has an out-sized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Hartmann2009a, Hartmann2014a}. There has been significant growth of land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a}; Fig. \ref{fig:shoreline_growth}). This collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics.
 
 Given that the region is a modern-day hot spot of chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has growth of the broader Indonesian archipelago had on Earth's climate state and what would \pCOtwo be if the region was not there at all? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. There has been significant planetary cooling since the Mid-Miocene Climatic Optimum leading to the onset of northern hemisphere glaciation, in addition to Antarctic glaciation, over the past few million years \citep{Shackleton1984a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a} providing an explanation for the delay between southern hemisphere and bipolar glaciation. We seek to evaluate the hypothesis that the growth of the broader Indonesian archipelago has played a significant role in lowering \pCOtwo thereby driving this cooling and the development of northern hemisphere ice sheets.
 
@@ -155,18 +156,17 @@ To estimate the decrease in steady state \pCOtwo associated with the increase in
 
 The silicate weathering component of GEOCLIM calculates \COtwo consumption by silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions (e.g. \citealp{Godderis2014a}). However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component based on work by \citet{Heimsath1997a}, \citet{Gabet2009a}, \citet{West2012a}, \citet{Carretier2014a}, \citet{Godderis2017b}, and \citet{Maffre2018a}, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of arc-continent collisions in the Malay Archipelago on \pCOtwo, the relatively high Ca and Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) of \citet{Hartmann2012a}. 16 lithologic categories are represented in GLiM, which we simplify into 6 broader categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (Fig. XX; see SI). Each continental grid cell is then assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are then assigned based on the mean of MgO and CaO measurements on rocks of each of these lithologic categories in the EarthChem Portal (\url{www.earthchem.org/portal}). The weathering of carbonate grid cells does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since the chemical composition of these two lithologic classes is strongly dependent on its protolith. The chemical composition of siliciclastic sediment is further strongly dependent on its degree of chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during the calibration of the silicate weathering component of GEOCLIM (see below).
 
-Of the various parameters used in the equations that govern the silicate weathering component of GEOCLIM (see SI), four parameters in particular are poorly constrained in the existing literature: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$). As discussed above, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. Rather than prescribing values for these six parameters, we instead allowed these parameters to vary within reasonable bounds, resulting in a total of 78,000 unique parameter combinations. For each of these combinations, we computed spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg consumption) using present-day runoff, temperature, and slope fields. Following the approach of \citet{Maffre2018a}, we then summed the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a} as well as smaller-scale watersheds of the Amazon Basin in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}, then calculated the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins. Finally, we eliminate all parameter combinations that result in unreasonable total global \COtwo consumption (which we define to be \textless1\times10$^{12}$~mol/yr or \textgreater1\times10$^{13}$~mol/yr) and/or result in a low $r^{2}$ (which we define to be \textless0.4). This calibration method leaves 3,339 unique parameter combinations that produce total global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present day.
+Of the various parameters used in the equations that govern the silicate weathering component of GEOCLIM (see SI), four parameters in particular are poorly constrained in the existing literature: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$). As discussed above, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. Rather than prescribing values for these six parameters, we instead allowed these parameters to vary within reasonable bounds, resulting in a total of 78,000 unique parameter combinations. For each of these combinations, we computed spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg consumption) using present-day runoff, temperature, and slope fields. Following the approach of \citet{Maffre2018a}, we then summed the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a} as well as smaller-scale watersheds of the Amazon Basin in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}, then calculated the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins. Finally, we eliminate all parameter combinations that result in unreasonable total global \COtwo consumption (which we define to be \textless1\times10$^{12}$~mol/yr or \textgreater1\times10$^{13}$~mol/yr) and/or result in a low $r^{2}$ (which we define to be \textless0.4). This calibration method leaves 3,339 unique parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present day.
 
 Having calibrated the  silicate weathering component of GEOCLIM, we now estimate the decrease in steady state \pCOtwo associated with increases in global weatherability. To do so, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments \citep{Delworth2006a, Delworth2006b} for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 1\degrees $\times$ 1\degrees resolution. In the `1860 control' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the `+1\%/yr to 2$\times$' experiment, initial conditions are taken from the `1860 control' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The `+1\%/yr to 4$\times$' experiment is identical to the `+1\%/yr to 2$\times$' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. The primary strength of using these three GFDL CM2.0 experiments is that all non-\COtwo forcing agents are held constant, allowing the effect of \pCOtwo on climate to be isolated.
 
-We use geological and paleoshoreline data to quantify the changes in the area of the broader Indonesia Archipelago over the past 20~m.y. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Carbonate strata and thin-bedded siliciclastic strata were interpreted to represent a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as evidence for a subaerial environment. Taken together, these constraints delineate the position of shorelines. For the island of Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and for New Guinea we followed work of \citet{Norvick2003a, Cloos2005a, Gold2017a}. While there are difference in data sources and paleoshoreline outlines from \cite{Molnar2015a}, the calculated area at 5~Ma is quite similar.
+We use geological and paleoshoreline data to quantify the changes in the area of the broader Indonesia Archipelago over the past 20~m.y (Fig. \ref{fig:shoreline_growth}). Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Carbonate strata and thin-bedded siliciclastic strata were interpreted to represent a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as evidence for a subaerial environment. Taken together, these constraints delineate the position of shorelines. For the island of Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and for New Guinea we followed work of \citet{Norvick2003a, Cloos2005a, Gold2017a}. While there are difference in data sources and paleoshoreline outlines from \cite{Molnar2015a}, the calculated area at 5~Ma is quite similar.
 
 While there has been an increase in land area associated with arc-continent collision, there has also been a decrease in land area associated with subsidence of the Sunda Shelf \citep{Sarr2019a}. Although the majority of the Sunda Shelf is currently submerged, large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Halls2002a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region was likely a mixture of crystalline lithologies and siliciclastic sediments similar to eastern Borneo. The relatively low-relief of the region contrasts with the high-relief and mafic lithologies of the broader Indonesia Archipelago.
 
-Given these uncertainties, we test three scenarios related to the growth of the Indonesia Archipelago. The "removed Indonesia Archipelago" represents an end-member scenario, in which all islands associated with 
+Given these uncertainties, we test three scenarios related to the growth of the Indonesia Archipelago (Fig. \ref{fig:scenario_pCO2}). The "removed Indonesia Archipelago" scenario represents an end-member scenario, in which all islands associated with arc-continent collision in the area are entirely removed. The "reduced Indonesia Archipelago" scenario represents our best estimate of the subaerial extent of islands in the area at ca. 15~Ma, excluding the Sunda Shelf. The "reduced Indonesia Archipelago + Sunda Shelf" is identical to the "reduced Indonesia Archipelago" scenario with the addition of the Sunda Shelf. Given that no land in the Sunda Shelf is currently exposed, across the shelf we distribute felsic and siliciclastic lithologies, assign shallow slope values, and interpolate runoff across latitude bands (see SI).
 
-
-We incorporate land area associated with the subsided Sunda Shelf into our modeling.
+Our results indicate that 
 
 \section*{DISCUSSION}
 
@@ -192,9 +192,16 @@ XXX
 
 \begin{figure}
     \centering
-    \includegraphics{Manuscript/Figures/shoreline_growth.pdf}
+    \includegraphics[width=1\textwidth]{Manuscript/Figures/shoreline_growth.pdf}
     \caption{Growth of the broader Indonesia Archipelago. Past shorelines are shown in A with resultant area estimates summarized in B. A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record in C \cite{Zachos2008a}.}
     \label{fig:shoreline_growth}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=1\textwidth]{Manuscript/Figures/shoreline_growth.pdf}
+    \caption{Placeholder for steady state pCO2 figure.}
+    \label{fig:scenario_pCO2}
 \end{figure}
 
 \clearpage
