Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -145,7 +145,7 @@ Yves Godd\'eris\textsuperscript{3}
 
 \linenumbers
 
-Indonesia and New Guinea have an outsized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Gaillardet1999a, Hartmann2009a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a, Hall2017a}; Fig. \ref{fig:shoreline_growth}). The collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics \citet{Macdonald2019a}.
+Indonesia and New Guinea have an outsized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Gaillardet1999a, Hartmann2009a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system (\citealp{Molnar2015a, Hall2017a}; Fig. \ref{fig:shoreline_growth}). The collision between the Australian-Indian and Eurasian plates and intervening arc terranes has led to the emergence of Indonesia and New Guinea and the exhumation of large supra-subduction ophiolites and associated forearcs in the warm, wet tropics \citep{Macdonald2019a}.
 
 Given that the region is a modern-day hot spot of fresh water and sediment discharge \citep{Milliman2013a}, and chemical weathering and \COtwo consumption \citep{Hartmann2009a}, what effect has the emergence of Indonesia and New Guinea had on Earth's geochemical cycles and climate state? If this region was instead under water, would we have a glacial climate today? Based on paleogeographic reconstructions of arc-continent collisions through time, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began at $\sim$14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \citep{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \citep{DeConto2008a} providing an explanation for the delay between southern hemisphere and bipolar glaciation. We seek to evaluate the hypothesis that the increase of subaerially-exposed land area in Indonesia and New Guinea has played a significant role in lowering \pCOtwo thereby driving this cooling and the development of northern hemisphere ice sheets.
 
@@ -163,15 +163,19 @@ Having calibrated the  silicate weathering component of GEOCLIM, we estimate the
 
 We use geological and paleoshoreline data to quantify the changes in the area of the broader Indonesia Archipelago over the past 20~m.y (Fig. \ref{fig:shoreline_growth}). Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km$^{2}$, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Carbonate strata and thin-bedded siliciclastic strata were interpreted to represent a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as evidence for a subaerial environment. Taken together, these constraints delineate the position of shorelines. For the island of Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and for New Guinea we followed work of \citet{Norvick2003a, Harrington2017a, Gold2017a}. Although there are difference in data sources and paleoshoreline outlines from \cite{Molnar2015a}, the calculated area at 5~Ma is similar.
 
-Along with the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, there has also been a decrease in subaerially-exposed land area on the Sunda Shelf \citep{Sarr2019a}. Large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence of the Sunda Shelf \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region exposed a mixture of felsic basement rocks and siliciclastic sediments \citet{Darmadi2007a}. The relatively low-relief and felsic lithologies of the region contrasts with the high-relief and mafic lithologies of most of Indonesia and New Guinea.
+Along with the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, there has also been a decrease in subaerially-exposed land area on the Sunda Shelf \citep{Sarr2019a}. Large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}, potentially driving climate amplification on orbital timescales (ADD DENEZIO&TIERNY REFS). Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence of the Sunda Shelf \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region exposed a mixture of felsic basement rocks and siliciclastic sediments \citet{Darmadi2007a}. The relatively low-relief and felsic lithologies of the region contrasts with the high-relief and mafic lithologies of most of Indonesia and New Guinea.
 
 To explore the sensitivity of global weatherability and climate state to the emergence of Indonesia and New Guinea, we test three scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The ``removed Indonesia and New Guinea'' scenario represents an end-member scenario, in which all islands associated with arc-continent collision in the area are entirely removed. The ``reduced Indonesia and New Guinea'' scenario represents our best estimate of the subaerial extent of islands in the area at ca. 15~Ma, excluding the Sunda Shelf. The ``reduced Indonesia and New Guinea + Sunda Shelf'' is identical to the ``reduced Indonesia and New Guinea'' scenario with the addition of the Sunda Shelf. Given that no land in the Sunda Shelf is currently exposed, across the shelf we distribute felsic and siliciclastic lithologies, assign shallow slope values, and interpolate runoff across latitude bands (see SI).
 
-Of the 3,339 unique parameter combinations, the ``removed Indonesia and New Guinea'' scenario resulted in steady-state \pCOtwo's of 598-729~ppm (5-95 percentile values), the ``reduced Indonesia and New Guinea'' scenario of 547-638~ppm, and the ``reduced Indonesia and New Guinea + Sunda Shelf'' of 533-611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-Industrial \pCOtwo would have been \textgreater500~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is minimal, given the low Mg+Ca of the lithologies that comprise the Sunda Shelf as well as its low slope.
+Using the 3,339 unique parameter combinations, the ``removed Indonesia and New Guinea'' scenario resulted in steady-state \pCOtwo's of 598-729~ppm (5-95 percentile values), the ``reduced Indonesia and New Guinea'' scenario of 547-638~ppm, and the ``reduced Indonesia and New Guinea + Sunda Shelf'' of 533-611~ppm (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, pre-Industrial \pCOtwo would have been $sim$500-700~ppm. Notably, the effect of the Sunda Shelf on steady-state \pCOtwo is relatively small, given the low Mg+Ca of the lithologies that comprise the Sunda Shelf as well as its low slope.
+
+These GEOCLIM \pCOtwo values resemble proxy-based estimates for the early Miocene \citep{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of Indonesia and New Guinea is enough to explain climate change over the Neogene. Furthermore, our paleoshoreline reconstructions (Fig. \ref{fig:shoreline_growth}) show a broad increase in exposed land area over the Neogene and an acceleration over the past 4~m.y. This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4~m.y. that culminated in the initiation of the Northern Hemisphere ice sheets.
+
+XXX
 
 %%%
 % maybe place this at the end of the discussion
-The movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is an alternative hypothesis that has been put forth to explain the draw down of \COtwo leading into Oligocene glaciation of Antarctica \citep{Kent2008a, Kent2013a}. To explore the sensitivity of global weatherability and climate state to the presence of these traps, we test three additional scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). In the ``removed Deccan Traps'' and the ``removed Ethiopian Traps'' scenarios, all volcanics associated with the respective traps are replaced with bulk continental crust. In the ``removed both traps'' scenario, all volcanics associated with both traps are replaced with bulk continental crust. These scenarios result in steady-state \pCOtwo's \textless500~ppm, distinctly lower than those for the three Indonesia and New Guinea scenarios.
+The movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is an hypothesis that has been put forth to explain the draw down of \COtwo leading into Oligocene glaciation of Antarctica \citep{Kent2008a, Kent2013a}. To explore the sensitivity of global weatherability and climate state to the presence of these traps, we test three additional scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). In the ``removed Deccan Traps'' and the ``removed Ethiopian Traps'' scenarios, all volcanics associated with the respective traps are replaced with bulk continental crust. In the ``removed both traps'' scenario, all volcanics associated with both traps are replaced with bulk continental crust. These scenarios result in steady-state \pCOtwo's \textless500~ppm, distinctly lower than those for the three Indonesia and New Guinea scenarios.
 %%%
 
 
@@ -179,7 +183,7 @@ The movement of the Deccan Traps into the tropical rain belt together with the l
 
 After the MCO, a cooling trend began ca. 14~Ma that accelerated over the past 4~m.y. Many hypotheses have been proposed to explain this cooling trend including changes in ocean circulation and upwelling \citep{Shevenell2004a, Holbourn2015a}, perhaps associated with increased organic carbon burial \citep{Vincent1985a, Flower1993a} or the closure of the Central American Seaway \citep{Haug1998a}, an increase in the strength of the Walker Circulation \citep{Molnar2015a}, feedbacks with terrestrial vegetation \citep{Cerling1997a}(MAYBE ONE OF THE DINEZIO REFS), uplift in the Himalayas \citep{Raymo1988a}, or a decrease in volcanic outgassing \citep{Berner1983a}(ROWAN+ROWLEY). Although changes in circulation and vegetation may have contributed to changes in \pCOtwo on hundreds of thousands to million-year timescales, the global extent and multi-million year timescale suggests that the long-term cooling trend since 14~Ma is the product of changes in the geological sources and sinks of carbon, modulated by the silicate weathering feedback \citep{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. Global spreading rates, ridge length, and paleogeography elsewhere on Earth undoubtedly changed through the Neogene contributing to changes in geological carbon sources and sinks, however, here we show that the global climate state is particularly sensitive to the tropical paleogeograpahy of Indonesia and New Guinea.
 
-Indonesia and New Guinea are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. This paleogeographical feature originated in the Middle Miocene with the collision between the Outer Melanesian arc and the distal margin of Australia (59, 61, 62). In New Guinea, this resulted in the exhumation of the 1440 km long Irian-Marum-April ophiolite belt (Fig. 3; suture 7). The Middle Miocene (16–14 Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt (61, 63). This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12 Ma (59). Mountain building began in the Late Miocene, ca. 8-7 Ma (59, 62) with 3-4 km of denudation between 8-5 Ma (64). Exhumation of the Central Range accelerated over the past 4 Myrs due to slab-breakoff and buoyant uplift under New Guinea (61,65). After arc-continent collision in New Guinea, a left-lateral strike-slip margin developed on the northern margin (62). Over the past 4 Myr, this change in plate motion caused the westward extrusion and exhumation of the Cretaceous to Oligocene ophiolites of Obi (67), Halmahera (68, 69), and northern New Guinea (70) (Fig. 3; sutures 8-10). In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4 Ma (van Ufford & Cloos, 2005), which is well dated with a change in provenance from continental to volcanic detritus (Abbott et al., 1994; Abbott, 1995) and unroofing of basement-cored uplifts (Hill & Gleadow, 1989). 
+Indonesia and New Guinea are potent sinks of carbon because they contain large swaths of ophiolites that are exposed along E-W belts of tectonic topography in the warm wet tropics. In New Guinea, this paleogeographical feature originated in the Middle Miocene with the collision between the Outer Melanesian arc and the distal margin of Australia (59, 61, 62), which resulted in the exhumation of the 1440 km long Irian-Marum-April ophiolite belt. The Middle Miocene (16–14 Ma) basal Markats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the New Guinea ophiolite belt (61, 63). This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12 Ma (59). Mountain building began in the Late Miocene, ca. 8-7 Ma (59, 62) with 3-4 km of denudation between 8-5 Ma (64). Exhumation of the Central Range accelerated over the past 4 Myrs due to slab-breakoff and buoyant uplift under New Guinea (61,65). After arc-continent collision in New Guinea, a left-lateral strike-slip margin developed on the northern margin (62). Over the past 4 Myr, this change in plate motion caused the westward extrusion and exhumation of the Cretaceous to Oligocene ophiolites of Obi (67), Halmahera (68, 69), and northern New Guinea (70) (Fig. 3; sutures 8-10). In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4 Ma (van Ufford & Cloos, 2005), which is well dated with a change in provenance from continental to volcanic detritus (Abbott et al., 1994; Abbott, 1995) and unroofing of basement-cored uplifts (Hill & Gleadow, 1989). 
 
 Our paleoshoreline reconstructions show a broad increase in exposed land area over the Neogene and an exceleration over the past 4 Ma. This trend is due to progressive arc-continent collision from west to east that has culminated with increased exhumation in New Guinea in the past 4 Ma. This trend mirrors broad cooling over the Neogene and accelerated cooling over the past 4 Ma that culminated in the initiation of the Northern Hemisphere ice sheets. Not only does the timing of paleogeographic changes in the tropics coincide with the cooling trend, but our coupled weathering climate model demonstrates that the magnitude of change in pCO2 due to the reconstructed paleogeographic changes is sufficient to explain climate change over the Neogene.
 
