Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -189,28 +189,21 @@ However, it is important to acknowledge the limitations of the approach taken in
 
 \section*{ACKNOWLEDGEMENTS \label{sec:ACKNOWLEDGEMENTS}}
 
-We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their contributions to the paleoshoreline reconstructions. Collaborative research between NLS-H and YG was initially supported by the France-Berkeley Fund. FAM and NLS-H thank NSF FRES grant #20191023 for support. 
-
-\clearpage
-\newpage
-
-\section*{TABLES}
-
-XXX
+We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their contributions to the paleoshoreline reconstructions. Collaborative research between NLS-H and YG was initially supported by the France-Berkeley Fund. FAM and NLS-H thank NSF FRES grant \#20191023 for support. 
 
 \clearpage
 \newpage
 
 \section*{FIGURES}
 
-\begin{figure}
+\begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{Manuscript/Figures/shoreline_growth.pdf}
-    \caption{The emergence of Indonesia and New Guinea. Past shorelines are shown in A with resultant area estimates summarized in B. A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record in C \cite{Zachos2008a}.}
+    \includegraphics[width=0.9\textwidth]{Manuscript/Figures/shoreline_growth.pdf}
+    \caption{The emergence of Indonesia and New Guinea. Past shorelines are shown in A with resultant area estimates summarized in B. A significant increase in area over the past 4 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record in C \citep{Zachos2008a}.}
     \label{fig:shoreline_growth}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2.pdf}
     \caption{Box shows quartiles, whiskers show 1.5$\times$ the interquartile range, notch shows median with 95\% confidence interval. Each dot shows a parameter combination. Dashed line is PI \pCOtwo.}
